updated HTML file

--- a/index.html
+++ b/index.html
@@ -32,11 +32,48 @@
                 <p id="windSpeed"></p>
             </div>
 
-            <div id="forecastInfo">
-
-
-
-                
+            <div id="forecastInfo" class="col-8">
+                <h3 id="fiveDayFore">Five Day Forecast</h3>
+                <div id="dayOne" class = "card" >
+                    <div class="card-body">
+                        <h3 id="date1" class="card-title"></h3>
+                        <p id="temp1" class="card-text"></p>
+                        <p id="humid1" class="card-text"></p>
+                        <p id="wind1" class="card-text"></p>
+                    </div>
+                </div>
+                <div id="dayTwo" class = "dayBlock">
+                    <div class="card-body">
+                        <h3 id="date2" class="card-title"></h3>
+                        <p id="temp2" class="card-text"></p>
+                        <p id="humid2" class="card-text"></p>
+                        <p id="wind2" class="card-text"></p>
+                    </div>
+                </div>
+                <div id="dayThree" class = "dayBlock">
+                    <div class="card-body">
+                        <h3 id="date3" class="card-title"></h3>
+                        <p id="temp3" class="card-text"></p>
+                        <p id="humid3" class="card-text"></p>
+                        <p id="wind3" class="card-text"></p>
+                    </div>
+                </div>
+                <div id="dayFour" class = "dayBlock">
+                    <div class="card-body">
+                        <h3 id="date4" class="card-title"></h3>
+                        <p id="temp4" class="card-text"></p>
+                        <p id="humid4" class="card-text"></p>
+                        <p id="wind4" class="card-text"></p>
+                    </div>
+                </div>
+                <div id="dayfive" class = "dayBlock">
+                    <div class="card-body">
+                        <h3 id="date5" class="card-title"></h3>
+                        <p id="temp5" class="card-text"></p>
+                        <p id="humid5" class="card-text"></p>
+                        <p id="wind5" class="card-text"></p>
+                    </div>
+                </div>      
             </div>
         </div>
     </div>
@@ -50,10 +87,13 @@
     <!-- second column -->
     <!-- todays weather of the specified city -->
     <!-- 5 day forecast for that city -->
-    <script src="./assets/java/script.js"> </script>
+    
     <script
-      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.9/dayjs.min.js"
+      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+      crossorigin="anonymous"
     ></script>
+    <script src="./assets/java/script.js"> </script>
 </body>
 
 </html>
