--- a/index.html
+++ b/index.html
@@ -15,26 +15,31 @@
     <header class="bg-warning">
         <h1> Weather Dashboard </h1>
     </header>
-    <div id="mainContainer" class="row">
-        <div id="searchArea" class="col-3  border-bottom">
-            <h3> Search For a City: </h3>
-            <input id="cityInput">
-            <button id="searchBtn">Search!</button>
+    <div id="mainContainer" >
+        <div id="topPortion" class="row">
+            <div id="searchNav" class="card col-3">
+                <div id="searchArea" class="card-body  border-bottom">
+                    <h3 class="card-title"> Search For a City: </h3>
+                    <input id="cityInput">
+                    <button id="searchBtn">Search!</button>
 
 
-        </div>
-        <div id="cityInfo" class="col-9">
-
-            <div id="currentWeatherInfo" class="col-8" >
-                <h3 id="cityName"></h3>
-                <p id="temperature"></p>
-                <p id="humidity"></p>
-                <p id="windSpeed"></p>
+                </div>
             </div>
+            <div id="cityInfo" class="card col-9">
 
-            <div id="forecastInfo" class="col-8">
+                <div id="currentWeatherInfo" class="card-body" >
+                    <h2 id="title"> Current Weather:</h2>
+                    <h3 id="cityName" class="card-title"></h3>
+                    <p id="temperature" class="card-text"></p>
+                    <p id="humidity" class="card-text"></p>
+                    <p id="windSpeed" class="card-text"></p>
+                </div>
+        </div>
+
+            <div id="forecastInfo" class="row col-12">
                 <h3 id="fiveDayFore">Five Day Forecast</h3>
-                <div id="dayOne" class = "card" >
+                <div id="dayOne" class = "card col-3 dayBlock" >
                     <div class="card-body">
                         <h3 id="date1" class="card-title"></h3>
                         <p id="temp1" class="card-text"></p>
@@ -42,7 +47,7 @@
                         <p id="wind1" class="card-text"></p>
                     </div>
                 </div>
-                <div id="dayTwo" class = "dayBlock">
+                <div id="dayTwo" class = "card col-3 dayBlock">
                     <div class="card-body">
                         <h3 id="date2" class="card-title"></h3>
                         <p id="temp2" class="card-text"></p>
@@ -50,7 +55,7 @@
                         <p id="wind2" class="card-text"></p>
                     </div>
                 </div>
-                <div id="dayThree" class = "dayBlock">
+                <div id="dayThree" class = "card col-3 dayBlock">
                     <div class="card-body">
                         <h3 id="date3" class="card-title"></h3>
                         <p id="temp3" class="card-text"></p>
@@ -58,7 +63,7 @@
                         <p id="wind3" class="card-text"></p>
                     </div>
                 </div>
-                <div id="dayFour" class = "dayBlock">
+                <div id="dayFour" class = "card col-3 dayBlock">
                     <div class="card-body">
                         <h3 id="date4" class="card-title"></h3>
                         <p id="temp4" class="card-text"></p>
@@ -66,7 +71,7 @@
                         <p id="wind4" class="card-text"></p>
                     </div>
                 </div>
-                <div id="dayfive" class = "dayBlock">
+                <div id="dayfive" class = "card offset-2 col-8 dayBlock">
                     <div class="card-body">
                         <h3 id="date5" class="card-title"></h3>
                         <p id="temp5" class="card-text"></p>
@@ -87,12 +92,7 @@
     <!-- second column -->
     <!-- todays weather of the specified city -->
     <!-- 5 day forecast for that city -->
-    
-    <script
-      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
-      crossorigin="anonymous"
-    ></script>
+   
     <script src="./assets/java/script.js"> </script>
 </body>
 
